@@ -1,3 +1,4 @@
+* Use local timezone
 * Sanitize report file extension
 
 Version 3.0.0 - 2013-10-21
